# DC-TRADE-ENGINE

./: .env.example  .gitignore  =0.2.36  BINANCE_BTCUSD.P, 240 (1).csv  BINANCE_BTCUSD.P, 60.csv  BINANCE_XAGUSDT.P, 240.csv  BINANCE_XAGUSDT.P, 60.csv  CME_MINI_NQ1!, 15.csv  CME_MINI_NQ1!, 60.csv  COINBASE_BNBUSD, 240.csv  COINBASE_BNBUSD, 60.csv  COINBASE_ETHUSD, 240 (3).csv  COINBASE_ETHUSD, 60 (1).csv  COINBASE_PAXGUSD, 240.csv  COINBASE_PAXGUSD, 60.csv  COINBASE_SOLUSDT, 240.csv  COINBASE_SOLUSDT, 60.csv  Procfile  YAHOO_SI_F_60.csv  donchian_supertrend.pine  ichimoku_cloud_ema.pine  pyproject.toml  railway.json  run_optimize_ranking.py
config/: default.yaml
scripts/: backtest_donchian_supertrend.py
tests/: test_dashboard_homepage.py  test_strategies.py
tmp/: reboot_bots.py  reboot_logs.txt
tradeengine/: __init__.py  __main__.py  cli.py  config.py
tradeengine/backtest/: engine.py  metrics.py  optimizer.py
tradeengine/dashboard/: app.py  auth.py  bot_manager.py
tradeengine/data/: fetcher.py  models.py  pionex_client.py  pionex_futures_client.py  pionex_ws.py  store.py  yahoo_client.py  yahoo_fetcher.py
tradeengine/database/: connection.py  crud.py  encryption.py  models.py
tradeengine/indicators/: ta_core.py
tradeengine/strategies/: base.py  registry.py
tradeengine/trading/: engine.py  executor.py  futures_paper_executor.py  paper_executor.py  pionex_executor.py  position_manager.py  risk_manager.py  signal_executor.py  yahoo_engine.py
tradeengine/utils/: crypto.py
user_strategies/: my_custom_strategy.py
(+41 files in other folders)
